@@ -21,15 +21,19 @@ import static org.pucar.dristi.config.ServiceConstants.*;
 
 @Component
 public class IdgenUtil {
+    private final ObjectMapper mapper;
+    private final ServiceRequestRepository restRepo;
+    private final Configuration configs;
 
     @Autowired
-    private ObjectMapper mapper;
-
-    @Autowired
-    private ServiceRequestRepository restRepo;
-
-    @Autowired
-    private Configuration configs;
+    public IdgenUtil(
+            ObjectMapper mapper,
+            ServiceRequestRepository restRepo,
+            Configuration configs) {
+        this.mapper = mapper;
+        this.restRepo = restRepo;
+        this.configs = configs;
+    }
 
     public List<String> getIdList(RequestInfo requestInfo, String tenantId, String idName, String idformat, Integer count) {
         List<IdRequest> reqList = new ArrayList<>();
@@ -46,6 +50,6 @@ public class IdgenUtil {
         if (CollectionUtils.isEmpty(idResponses))
             throw new CustomException(IDGEN_ERROR, NO_IDS_FOUND_ERROR);
 
-        return idResponses.stream().map(IdResponse::getId).collect(Collectors.toList());
+        return idResponses.stream().map(IdResponse::getId).toList();
     }
 }
